fix armor/shield artifact dice not included in pool

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -4137,40 +4137,48 @@
         });
     });
     
-        /* set armor dice pool */
-        on("clicked:armor-roll", function () {
-            clog('Change Detected: Armor - button clicked');
-            getAttrs(['ar', 'armor_artifact_die_ocho', 'armor_artifact_die_eight', 'armor_artifact_die_ten', 'armor_artifact_die_twelve', 'armor1_name', 'armor1_bonus', 'armor1_bonus_max', 'armor1_damage', 'armor1_ar', 'armor2_name', 'armor2_bonus', 'armor2_bonus_max', 'armor2_damage', 'armor2_ar'], function (values) {
-                const ar = int(values.ar),
-                armor1_name = values.armor1_name,
-                armor1_bonus = int(values.armor1_bonus),
-                armor1_bonus_max = int(values.armor1_bonus_max),
-                armor1_damage = int(values.armor1_damage),
-                armor1_ar = int(values.armor1_ar),
-                armor2_name = values.armor2_name,
-                armor2_bonus = int(values.armor2_bonus),
-                armor2_bonus_max = int(values.armor2_bonus_max),
-                armor2_damage = int(values.armor2_damage),
-                armor2_ar = int(values.armor2_ar),
-                armor_artifact_die_ocho = int(values.armor_artifact_die_ocho),
-                armor_artifact_die_eight = int(values.armor_artifact_die_eight),
-                armor_artifact_die_ten = int(values.armor_artifact_die_ten),
-                armor_artifact_die_twelve = int(values.armor_artifact_die_twelve),
-                armorMiscSkill = Math.max((armor1_damage + armor2_damage),-3), //max of 3 negative dice
-                armorMiscGear = ar;
-                setAttrs({
-                    attribute: 0,
-                    gear: armorMiscGear,
-                    skill: armorMiscSkill,
-                    artifact_die_ocho: armor_artifact_die_ocho,
-                    artifact_die_eight: armor_artifact_die_eight,
-                    artifact_die_ten: armor_artifact_die_ten,
-                    artifact_die_twelve: armor_artifact_die_twelve,
-                    current_preset: getTranslationByKey(`armor-roll`),
-                    include_with_roll: `{{armor1-name=${armor1_name}}} {{armor1-rating=${armor1_bonus}}} {{armor1-rating-max=${armor1_bonus_max}}} {{armor1-rating-misc=${armor1_damage}}} {{armor1-rating-total=${armor1_ar}}} {{armor2-name=${armor2_name}}} {{armor2-rating=${armor2_bonus}}} {{armor2-rating-max=${armor2_bonus_max}}} {{armor2-rating-misc=${armor2_damage}}} {{armor2-rating-total=${armor2_ar}}}`
-                });
+    /* set armor dice pool */
+    on("clicked:armor-roll", function () {
+        clog('Change Detected: Armor - button clicked');
+        getAttrs(['ar', 'armor_artifact_die_ocho', 'armor_artifact_die_eight', 'armor_artifact_die_ten', 'armor_artifact_die_twelve', 'armor1_artifact_die_ocho', 'armor1_artifact_die_eight', 'armor1_artifact_die_ten', 'armor1_artifact_die_twelve', 'armor2_artifact_die_ocho', 'armor2_artifact_die_eight', 'armor2_artifact_die_ten', 'armor2_artifact_die_twelve', 'armor1_name', 'armor1_bonus', 'armor1_bonus_max', 'armor1_damage', 'armor1_ar', 'armor2_name', 'armor2_bonus', 'armor2_bonus_max', 'armor2_damage', 'armor2_ar'], function (values) {
+            const ar = int(values.ar),
+            armor1_name = values.armor1_name,
+            armor1_bonus = int(values.armor1_bonus),
+            armor1_bonus_max = int(values.armor1_bonus_max),
+            armor1_damage = int(values.armor1_damage),
+            armor1_ar = int(values.armor1_ar),
+            armor2_name = values.armor2_name,
+            armor2_bonus = int(values.armor2_bonus),
+            armor2_bonus_max = int(values.armor2_bonus_max),
+            armor2_damage = int(values.armor2_damage),
+            armor2_ar = int(values.armor2_ar),
+            armor1_artifact_die_ocho = int(values.armor1_artifact_die_ocho),
+            armor1_artifact_die_eight = int(values.armor1_artifact_die_eight),
+            armor1_artifact_die_ten = int(values.armor1_artifact_die_ten),
+            armor1_artifact_die_twelve = int(values.armor1_artifact_die_twelve),
+			armor2_artifact_die_ocho = int(values.armor2_artifact_die_ocho),
+            armor2_artifact_die_eight = int(values.armor2_artifact_die_eight),
+            armor2_artifact_die_ten = int(values.armor2_artifact_die_ten),
+            armor2_artifact_die_twelve = int(values.armor2_artifact_die_twelve),
+            armor_artifact_die_ocho = int(values.armor_artifact_die_ocho),
+            armor_artifact_die_eight = int(values.armor_artifact_die_eight),
+            armor_artifact_die_ten = int(values.armor_artifact_die_ten),
+            armor_artifact_die_twelve = int(values.armor_artifact_die_twelve),
+            armorMiscSkill = Math.max((armor1_damage + armor2_damage),-3), //max of 3 negative dice
+            armorMiscGear = ar;
+            setAttrs({
+                attribute: 0,
+                gear: armorMiscGear,
+                skill: armorMiscSkill,
+                artifact_die_ocho: Math.max(armor_artifact_die_ocho, armor1_artifact_die_ocho, armor2_artifact_die_ocho),
+                artifact_die_eight: Math.max(armor_artifact_die_eight, armor1_artifact_die_eight, armor2_artifact_die_eight),
+                artifact_die_ten: Math.max(armor_artifact_die_ten, armor1_artifact_die_ten, armor2_artifact_die_ten),
+                artifact_die_twelve: Math.max(armor_artifact_die_twelve, armor1_artifact_die_twelve, armor2_artifact_die_twelve),
+                current_preset: getTranslationByKey(`armor-roll`),
+                include_with_roll: `{{armor1-name=${armor1_name}}} {{armor1-rating=${armor1_bonus}}} {{armor1-rating-max=${armor1_bonus_max}}} {{armor1-rating-misc=${armor1_damage}}} {{armor1-rating-total=${armor1_ar}}} {{armor2-name=${armor2_name}}} {{armor2-rating=${armor2_bonus}}} {{armor2-rating-max=${armor2_bonus_max}}} {{armor2-rating-misc=${armor2_damage}}} {{armor2-rating-total=${armor2_ar}}}`
             });
         });
+    });
         
         /* set shield dice pool */
         on("clicked:shield-shove-roll", function () {
