Fixed sheet.json, added logo image

--- a/LANCER RPG (1.8)/LANCER.html
+++ b/LANCER RPG (1.8)/LANCER.html
@@ -256,7 +256,7 @@ on("sheet:opened change:acc_diff chage:frame_save_target change:frame_class chan
 			<div class="nomarg 1x tab-flex-item" style="height:75px;width:800px"> <!-- header bar-->
 				<div class="nested tab-flex-item">
 					<div class="flex-element"> 
-						<img src="https://i.imgur.com/nQNsFBU.png" style="width:225px;height:64px;margin-left:2px"/>
+						<img src="images/logo.png" style="width:225px;height:64px;margin-left:2px"/>
 					</div> 
 				</div> 
 				<div class="1x nopad headerbar tab-flex-item" style="height:100%;width:70%;"> <!--header inputs-->
@@ -670,7 +670,7 @@ on("sheet:opened change:acc_diff chage:frame_save_target change:frame_class chan
 			<div class="nomarg 1x tab-flex-item" style="height:75px;width:800px"> <!-- header bar-->
 				<div class="nested tab-flex-item">
 					<div class="flex-element"> 
-						<img src="https://i.imgur.com/nQNsFBU.png" style="width:225px;height:64px;margin-left:2px"/>
+						<img src="images/logo.png" style="width:225px;height:64px;margin-left:2px"/>
 					</div> 
 				</div> 
 				<div class="1x nopad headerbar tab-flex-item" style="height:100%;width:70%;"> <!--header inputs-->
@@ -863,7 +863,7 @@ on("sheet:opened change:acc_diff chage:frame_save_target change:frame_class chan
 			<div class="nomarg 1x tab-flex-item" style="height:75px;width:800px"> <!-- header bar-->
 				<div class="nested tab-flex-item">
 					<div class="flex-element"> 
-						<img src="https://i.imgur.com/nQNsFBU.png" style="width:225px;height:64px;margin-left:2px"/>
+						<img src="images/logo.png" style="width:225px;height:64px;margin-left:2px"/>
 					</div> 
 				</div> 
 				<div class="1x nopad headerbar tab-flex-item" style="height:100%;width:70%;"> <!--header inputs-->
