important bugfix for stat calculation

--- a/LANCER RPG (1.8)/LANCER.html
+++ b/LANCER RPG (1.8)/LANCER.html
@@ -1,6 +1,6 @@
 <script type="text/worker">
 on("sheet:opened change:acc_diff chage:frame_save_target change:frame_class change:acc_diff_mod change:frame_sp change:core_hull change:core_agility change:core_systems change:core_engineering change:licenselevel change:frame_evasion change:frame_sensors change:frame_edefense change:frame_evasion change:frame_armor change:frame_speed change:frame_hp_bonus change:frame_heat_bonus change:frame_repairs_bonus change:acc_tab change:frame_evasion_bns change:frame_limited_bns change:frame_speed_bns change:frame_techatk change:frame_techatk_bns change:frame_max_sp_bns change:frame_edefense_bns", function(){
-	getAttrs(["acc_dif", "core_hull", "core_agility","core_systems","core_engineering","licenselevel","frame_evasion", "frame_evasion_bns", "frame_techatk", "frame_techatk_bns", "frame_max_sp_bns", "frame_edefense", "frame_edefense_bns","frame_speed", "frame_speed_bns", "frame_hp_bonus","frame_heat_bonus","frame_repairs_bonus", "frame_sp", "frame_class","acc_diff","acc_tab","grit"], function(values) {
+	getAttrs(["acc_dif", "core_hull", "core_agility","core_systems","core_engineering","licenselevel","frame_evasion", "frame_evasion_bns", "frame_techatk", "frame_techatk_bns", "frame_max_sp_bns", "frame_edefense", "frame_limited_bns", "frame_edefense_bns","frame_speed", "frame_speed_bns", "frame_hp_bonus","frame_heat_bonus","frame_repairs_bonus", "frame_sp", "frame_class","acc_diff","acc_tab","grit"], function(values) {
 		let net_acc=parseInt(values.acc_diff,10);
 		let frame_hp = 0;
 		let frame_repairs = 0;
@@ -226,7 +226,7 @@ on("sheet:opened change:acc_diff chage:frame_save_target change:frame_class chan
 			agi_half:Math.floor(parseInt(values.core_agility,10) / 2 ),
 			sys_half:Math.floor(parseInt(values.core_systems,10) / 2 ),
 			acc_diff:accdiff_input,
-			autocalc_limbonus: parseInt(values.frame_limited_bns) + Math.floor(parseInt(values.core_engineering,10) / 2 )
+			autocalc_limbonus: parseInt(values.frame_limited_bns,10) + Math.floor(parseInt(values.core_engineering,10) / 2 )
 		});
 	});
 });
