coerce int to 0 outside of parseInt

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -2391,7 +2391,7 @@
     // Version update for new or modified attributes
     on("sheet:opened", function() {
         getAttrs(["version", "sheettype"], function(v) {
-            const version = parseInt(v.version || 0);
+            const version = parseInt(v.version) || 0;
             var attrs = {};
 
             // get attribute updates for each version until the sheet has completed all steps
