Fix some talents

--- a/Nuestro-ultimo-verano/nuestroultimoverano.html
+++ b/Nuestro-ultimo-verano/nuestroultimoverano.html
@@ -383,7 +383,7 @@
                     talento_2_nombre: "Chiste", talento_2_descripcion: "Tu repertorio de chistes es extenso, pero hay uno que le hace gracia a todo el mundo. Una vez por sesión obtienes éxito automático en la prueba de Carisma o habilidad Palique que elijas.",
                     talento_3_nombre: "Compañero fiel", talento_3_descripcion: "Tienes una mascota de tamaño pequeño (ardilla, rata, gato, chihuahua, comadreja, ...) que te acompaña allá donde vas. Estáis tan conectados que obedece órdenes simples.", 
                     talento_4_nombre: "Majo/a", talento_4_descripcion: "Sabes cómo caer bien a la gente, al menos como primera impresión. Obtienes ventaja en las pruebas de habilidad Palique cuando intentas agradar o influir positivamente en alguien por primera vez.", 
-                    talento_5_nombre: "Michelines", talento_5_descripcion: "Tu habilidad para meterte en problemas te ha obliga a estar atento a todo lo que escuchas. Obtienes ventaja en la pruebas de    habilidad Al loro relacionadas con el oído.",
+                    talento_5_nombre: "Michelines", talento_5_descripcion: "Nunca perdonas el bocata de chorizo para merendar. Obtienes ventaja en las pruebas de Instintos por Constitución.",
                     talento_6_nombre: "Soy todo oídos", talento_6_descripcion: "Tu habilidad para meterte en problemas te ha obliga a estar atento a todo lo que escuchas. Obtienes ventaja en la pruebas   de habilidad Al loro relacionadas con el oído."},
                 cerebrito: {
                     hp: 4, 
@@ -403,7 +403,7 @@
                     ins: 1,
                     paga: 1, 
                     equipo: "Chándal o ropa deportiva, un accesorio deportivo (bate de béisbol, stick, etc.) y vehículo a elegir.", 
-                    talento_1_nombre: "As del manillar", talento_1_descripcion: "Posees un artilugio mecánico o electrónico, posiblemente construido por ti, que sirve para... (a consensuar con el        Director). Por ejemplo: un cinturón de herramientas, unos walkie talkies con alcance ampliado…", 
+                    talento_1_nombre: "As del manillar", talento_1_descripcion: "Manejas tu bici (u otro vehículo) a la perfección y no pierdes la oportunidad de hacer filigranas y conducir a toda pastilla. Obtienes ventaja en las pruebas de conducción (DES).", 
                     talento_2_nombre: "Cachas", talento_2_descripcion: "Gracias a las horas de entrenamiento te has convertido en un/a auténtico/a atleta. Obtienes ventaja en las pruebas de Fuerza (levantar, empujar, saltar, trepar, ...).",
                     talento_3_nombre: "Espabilado/a", talento_3_descripcion: "En situaciones complicadas siempre reaccionas y actúas de inmediato. Siempre actúas primero en aquellas situaciones en las  que haya que determinar el orden de actuación.", 
                     talento_4_nombre: "Firme", talento_4_descripcion: "Eres extremadamente tenaz y capaz de aguantar y zafarte de cualquier intento de presa o empujón. Obtienes ventaja en las pruebas de Instintos por Fuerza.", 
@@ -418,7 +418,7 @@
                     talento_1_nombre: "Amigo Félix", talento_1_descripcion: "Te encantan los animales y conectas con ellos de una manera sorprendente. Obtienes ventaja en las pruebas de habilidad Palique cuando interactúas con animales, bestias o seres no humanos.", 
                     talento_2_nombre: "Club de Exploradores", talento_2_descripcion: "Sabes desenvolverte en entornos hostiles, ya sea buscando rastros, orientándote o improvisando una fogata. Obtienes ventaja en las pruebas de habilidad Rambo.",
                     talento_3_nombre: "Escurridizo/a", talento_3_descripcion: "Eres especialmente ágil y consigues moverte como una lagartija. Obtienes ventaja en las pruebas de Instintos por Destreza.", 
-                    talento_4_nombre: "MacGyver", talento_4_descripcion: "Donde pones el ojo, pones la piedra. Obtienes ventaja en las tiradas de combate a distancia (DES).", 
+                    talento_4_nombre: "MacGyver", talento_4_descripcion: "Obtienes ventaja en las pruebas de habilidad Manitas relacionadas con construir o comprender artilugios no electrónicos.", 
                     talento_5_nombre: "Ojo de halcón", talento_5_descripcion: "Donde pones el ojo, pones la piedra. Obtienes ventaja en las tiradas de combate a distancia (DES).",
                     talento_6_nombre: "Primeros auxilios", talento_6_descripcion: "Gracias al cursillo al que te apuntaste el verano pasado obtienes ventaja en las pruebas de habilidad Manitas relacionadas con utilizar equipo médico."},
                 rebelde: {
