Button text fixed

--- a/Nuestro-ultimo-verano/nuestroultimoverano.html
+++ b/Nuestro-ultimo-verano/nuestroultimoverano.html
@@ -10,7 +10,7 @@
             <div class="sheet-col-3-14 sheet-center sheet-padl"><input class="sheet-underlined sheet-center sheet-handwrite" type="text" name="attr_alias"><br />APODO</div>
             <div class="sheet-col-1-14  sheet-center sheet-padl"><input class="sheet-underlined sheet-center sheet-handwrite" type="number" name="attr_age"><br />EDAD</div>
             <div class="sheet-col-2-7 sheet-padl sheet-center">
-            <button class="without-dice" type="roll" name="roll_continue" value="&{template:5eDefault} {{coin=1}} {{title=¡Grito de guerra!}} {{subheader=@{character_name}}} {{name=¡Grito de guerra!}} {{rollname=coin}} {{roll=[[1d2]]}} }} ">¡Grito de guerra!</button>
+            <button class="without-dice" type="roll" name="roll_continue" value="&{template:5eDefault} {{coin=1}} {{title=¡Grito de guerra!}} {{subheader=@{character_name}}} {{name=¡Grito de guerra!}} {{rollname=coin}} {{roll=[[1d2]]}} }} ">¡CONTINUE!</button>
             </div>
          
             <div class="sheet-col-3-14 sheet-center">
