Logic roll changed

--- a/Nuestro-ultimo-verano/nuestroultimoverano.html
+++ b/Nuestro-ultimo-verano/nuestroultimoverano.html
@@ -294,7 +294,7 @@
         <div class="sheet-col-1-6 sheet-padr"><input type="text" name="attr_weaponname"></div>
         <div class="sheet-col-1-5 sheet-padr">
             <select name="attr_weapontype">
-                <option value="1">Melee</option>
+                <option value="1">Cuerpo a cuerpo</option>
                 <option value="0">Distancia</option>
             </select>
         </div>
@@ -302,7 +302,7 @@
         <div class="sheet-col-1-2 sheet-padr"><input type="text" name="attr_weaponnotes"></div>
 
         <div class="sheet-col-1-24 sheet-center">
-            <button type="roll" class="sheet-new-button2" name="roll_Attack" value="&{template:5eDefault} {{weapon=1}} {{title=Ataque con @{weaponname}}} {{subheader=@{character_name}}} {{attack=[[1d20+[[({0,floor(1-abs(@{weapontype}-1))}dl1)*(@{strength_mod}-@{dexterity_mod})+@{dexterity_mod}]]+?{Modificador|0}]]}} {{damage=[[@{attackdmg}+[[({0,floor(1-abs(@{weapontype}-1))}dl1)*(@{strength_mod}-0)+0]]]]}} {{attackshowinfoblock=1}} }} "></button>
+            <button type="roll" class="sheet-new-button2" name="roll_Attack" value="&{template:5eDefault} {{weapon=1}} {{title=Ataque con @{weaponname}}} {{subheader=@{character_name}}} {{attack=[[1d20+[[({0,floor(1-abs(@{weapontype}-0))}dl1)*(@{dexterity_mod}-(@{strength_mod}))+@{strength_mod}]]+?{Modificador|0}]]}} {{damage=[[@{attackdmg}+[[({0,floor(1-abs(@{weapontype}-1))}dl1)*(@{strength_mod}-0)+0]]]]}} {{attackshowinfoblock=1}} }} "></button>
         </div>
     </div>
 </fieldset>
@@ -466,6 +466,7 @@
 
 <!-- Roll Templates -->
 <rolltemplate class="sheet-rolltemplate-5eDefault">
+    <hr>
     <div class="sheet-rt-card">
         <div class="sheet-center">
             {{#ride}}
@@ -478,7 +479,7 @@
                 <img src="https://i.imgur.com/ifdJkzW.png" alt="Golpe de remo"> 
             {{/weapon}}           
         </div>
-        <div class="sheet-rt-header">
+        <div class="sheet-rt-header sheet-padt">
 
             <div class="sheet-rt-title ">{{title}}</div>
             {{#subheader}}
