--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -3863,7 +3863,9 @@
 					<td>
 						<span class="sheet-tooltip-ef">
 							<img align="center" src="http://i.imgur.com/fK8iLhI.png" />
+							<span>
 							<div data-i18n="Werkzeuge-Minus">Werkzeuge (-)</div>
+							</span>
 						</span>
 					</td>
 					<td>
@@ -7018,7 +7020,7 @@
 						<td class="padding-1"><input style="width: 12em" type="text" name="attr_SchildName1"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildStrukturpunkte1"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildSchadensberechnung1" value="0"></td>
-						<td class="padding-1"><input type="number" disabled="true" name="attr_Schild1_SB" value="(((@{KK_Wert} - @{SchildSchadensberechnung1}) + abs(@{KK_Wert} - @{SchildSchadensberechnung1})) / 2)"></td>
+						<td class="padding-1"><input type="number" name="attr_Schild1_SB" value="0" readonly></td>
 						<td class="padding-1"><input style="width: 3em" type="number" name="attr_SchildTP1_1" value="0"><span data-i18n="W6-Plus">W6+</span></td>
 						<td class="padding-1"><input style="width: 3em" type="number" name="attr_SchildTP1_2" value="0"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildATMod1" value="0"></td>
@@ -7043,7 +7045,7 @@
 						<td class="padding-1"><input type="text" name="attr_SchildName2" style="width: 12em;"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildStrukturpunkte2"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildSchadensberechnung2"></td>
-						<td class="padding-1"><input type="number" disabled="true" name="attr_Schild2_SB" value="(((@{KK_Wert} - @{SchildSchadensberechnung2}) + abs(@{KK_Wert} - @{SchildSchadensberechnung2})) / 2)"></td>
+						<td class="padding-1"><input type="number" name="attr_Schild2_SB"  value="0" readonly></td>
 						<td class="padding-1"><input type="number" name="attr_SchildTP2_1" value="0" style="width: 3em;"><span data-i18n="W6-Plus">W6+</span></td>
 						<td class="padding-1"><input type="number" name="attr_SchildTP2_2" value="0" style="width: 3em;"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildATMod2" value="0"></td>
@@ -7068,7 +7070,7 @@
 						<td class="padding-1"><input type="text" name="attr_SchildName3" style="width: 12em;"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildStrukturpunkte3"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildSchadensberechnung3"></td>
-						<td class="padding-1"><input type="number" disabled="true" name="attr_Schild3_SB" value="(((@{KK_Wert} - @{SchildSchadensberechnung3}) + abs(@{KK_Wert} - @{SchildSchadensberechnung3})) / 2)"></td>
+						<td class="padding-1"><input type="number" name="attr_Schild3_SB" value="0" readonly></td>
 						<td class="padding-1"><input type="number" name="attr_SchildTP3_1" value="0" style="width: 3em;"><span data-i18n="W6-Plus">W6+</span></td>
 						<td class="padding-1"><input type="number" name="attr_SchildTP3_2" value="0" style="width: 3em;"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildATMod3" value="0"></td>
@@ -7093,7 +7095,7 @@
 						<td class="padding-1"><input type="text" name="attr_SchildName4" style="width: 12em;"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildStrukturpunkte4"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildSchadensberechnung4"></td>
-						<td class="padding-1"><input type="number" disabled="true" name="attr_Schild4_SB" value="(((@{KK_Wert} - @{SchildSchadensberechnung4}) + abs(@{KK_Wert} - @{SchildSchadensberechnung4})) / 2)"></td>
+						<td class="padding-1"><input type="number" name="attr_Schild4_SB" value="0" readonly></td>
 						<td class="padding-1"><input type="number" name="attr_SchildTP4_1" value="0" style="width: 3em;"><span data-i18n="W6-Plus">W6+</span></td>
 						<td class="padding-1"><input type="number" name="attr_SchildTP4_2" value="0" style="width: 3em;"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildATMod4" value="0"></td>
@@ -18216,8 +18218,11 @@ on("change:nkw_aktiv change:at_nkw1 change:at_nkw2 change:at_nkw3 change:at_nkw4
 	}); 
 });	
 
-on("change:schild_aktiv change:SchildAT1 change:SchildAT2 change:SchildAT3 change:SchildAT4 change:schildtp1_1 change:schildtp2_1 change:schildtp3_1 change:schildtp4_1 change:schildtp1_2 change:schildtp2_2 change:schildtp3_2 change:schildtp4_2", function() {
-	getAttrs(["Schild_Aktiv", "SchildAT1", "SchildAT2", "SchildAT3", "SchildAT4", "SchildTP1_1", "SchildTP2_1", "SchildTP3_1", "SchildTP4_1", "SchildTP1_2", "SchildTP2_2", "SchildTP3_2", "SchildTP4_2", "Schild1_SB", "Schild2_SB", "Schild3_SB", "Schild4_SB"], function(values) {
+on("change:schild_aktiv change:SchildAT1 change:SchildAT2 change:SchildAT3 change:SchildAT4 change:schildtp1_1 change:schildtp2_1 change:schildtp3_1 change:schildtp4_1 change:schildtp1_2 change:schildtp2_2 change:schildtp3_2 change:schildtp4_2 change:schildschadensberechnung1 change:schildschadensberechnung2 change:schildschadensberechnung3 change:schildschadensberechnung4", function() {
+	getAttrs(["Schild_Aktiv", "SchildAT1", "SchildAT2", "SchildAT3", "SchildAT4", "SchildTP1_1", "SchildTP2_1", "SchildTP3_1", "SchildTP4_1", "SchildTP1_2", "SchildTP2_2", "SchildTP3_2", "SchildTP4_2", "Schildschadensberechnung1", "Schildschadensberechnung2", "Schildschadensberechnung3", "Schildschadensberechnung4", "KK_Wert"], function(values) {
+
+		setAttrs({ Schild1_SB: Math.max(parseInt(values.KK_Wert) - parseInt(values.Schildschadensberechnung1), 0) });
+
 		if (values.Schild_Aktiv == 1) {
 			setAttrs({ AT_Aktiv_Schild: values.SchildAT1, TP_W_Aktiv_Schild: parseInt(values.SchildTP1_1), TP_Bonus_Aktiv_Schild: parseInt(values.SchildTP1_2) });
 		}
