--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -7019,7 +7019,7 @@
 					<tr align="center">
 						<td class="padding-1"><input style="width: 12em" type="text" name="attr_SchildName1"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildStrukturpunkte1"></td>
-						<td class="padding-1"><input type="number" name="attr_SchildSchadensberechnung1" value="0"></td>
+						<td class="padding-1"><input type="number" name="attr_SchildSchadensberechnung1" value="0" min="0"></td>
 						<td class="padding-1"><input type="number" name="attr_Schild1_SB" value="0" readonly></td>
 						<td class="padding-1"><input style="width: 3em" type="number" name="attr_SchildTP1_1" value="0"><span data-i18n="W6-Plus">W6+</span></td>
 						<td class="padding-1"><input style="width: 3em" type="number" name="attr_SchildTP1_2" value="0"></td>
@@ -7044,7 +7044,7 @@
 					<tr align="center">
 						<td class="padding-1"><input type="text" name="attr_SchildName2" style="width: 12em;"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildStrukturpunkte2"></td>
-						<td class="padding-1"><input type="number" name="attr_SchildSchadensberechnung2"></td>
+						<td class="padding-1"><input type="number" name="attr_SchildSchadensberechnung2" value="0" min="0"></td>
 						<td class="padding-1"><input type="number" name="attr_Schild2_SB"  value="0" readonly></td>
 						<td class="padding-1"><input type="number" name="attr_SchildTP2_1" value="0" style="width: 3em;"><span data-i18n="W6-Plus">W6+</span></td>
 						<td class="padding-1"><input type="number" name="attr_SchildTP2_2" value="0" style="width: 3em;"></td>
@@ -7069,7 +7069,7 @@
 					<tr align="center">
 						<td class="padding-1"><input type="text" name="attr_SchildName3" style="width: 12em;"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildStrukturpunkte3"></td>
-						<td class="padding-1"><input type="number" name="attr_SchildSchadensberechnung3"></td>
+						<td class="padding-1"><input type="number" name="attr_SchildSchadensberechnung3" value="0" min="0"></td>
 						<td class="padding-1"><input type="number" name="attr_Schild3_SB" value="0" readonly></td>
 						<td class="padding-1"><input type="number" name="attr_SchildTP3_1" value="0" style="width: 3em;"><span data-i18n="W6-Plus">W6+</span></td>
 						<td class="padding-1"><input type="number" name="attr_SchildTP3_2" value="0" style="width: 3em;"></td>
@@ -7094,7 +7094,7 @@
 					<tr align="center">
 						<td class="padding-1"><input type="text" name="attr_SchildName4" style="width: 12em;"></td>
 						<td class="padding-1"><input type="number" name="attr_SchildStrukturpunkte4"></td>
-						<td class="padding-1"><input type="number" name="attr_SchildSchadensberechnung4"></td>
+						<td class="padding-1"><input type="number" name="attr_SchildSchadensberechnung4" value="0" min="0"></td>
 						<td class="padding-1"><input type="number" name="attr_Schild4_SB" value="0" readonly></td>
 						<td class="padding-1"><input type="number" name="attr_SchildTP4_1" value="0" style="width: 3em;"><span data-i18n="W6-Plus">W6+</span></td>
 						<td class="padding-1"><input type="number" name="attr_SchildTP4_2" value="0" style="width: 3em;"></td>
@@ -18220,9 +18220,13 @@ on("change:nkw_aktiv change:at_nkw1 change:at_nkw2 change:at_nkw3 change:at_nkw4
 
 on("change:schild_aktiv change:SchildAT1 change:SchildAT2 change:SchildAT3 change:SchildAT4 change:schildtp1_1 change:schildtp2_1 change:schildtp3_1 change:schildtp4_1 change:schildtp1_2 change:schildtp2_2 change:schildtp3_2 change:schildtp4_2 change:schildschadensberechnung1 change:schildschadensberechnung2 change:schildschadensberechnung3 change:schildschadensberechnung4", function() {
 	getAttrs(["Schild_Aktiv", "SchildAT1", "SchildAT2", "SchildAT3", "SchildAT4", "SchildTP1_1", "SchildTP2_1", "SchildTP3_1", "SchildTP4_1", "SchildTP1_2", "SchildTP2_2", "SchildTP3_2", "SchildTP4_2", "Schildschadensberechnung1", "Schildschadensberechnung2", "Schildschadensberechnung3", "Schildschadensberechnung4", "KK_Wert"], function(values) {
-
-		setAttrs({ Schild1_SB: Math.max(parseInt(values.KK_Wert) - parseInt(values.Schildschadensberechnung1), 0) });
-
+		var zuweisung = "";
+		var i;
+		for (i = 1; i < 5; i++) {
+				zuweisung += "Schild" + i + "_SB: Math.max(parseInt(values.KK_Wert) - parseInt(values.Schildschadensberechnung" + i + "), 0), " ;
+		}
+		eval("setAttrs({ " + zuweisung + " })");
+		
 		if (values.Schild_Aktiv == 1) {
 			setAttrs({ AT_Aktiv_Schild: values.SchildAT1, TP_W_Aktiv_Schild: parseInt(values.SchildTP1_1), TP_Bonus_Aktiv_Schild: parseInt(values.SchildTP1_2) });
 		}
