universal fix for accuracy display

--- a/LANCER RPG (1.8)/LANCER.html
+++ b/LANCER RPG (1.8)/LANCER.html
@@ -232,7 +232,7 @@ on("sheet:opened change:acc_diff chage:frame_save_target change:frame_class chan
 });
 </script>
 
-<div style="background:#ddd;min-height:950px;min-width:820px;width:840px"> <!-- main container div-->
+<div style="background:#ddd;min-height:950px;min-width:820px;width:840px;"> <!-- main container div-->
 	<!-- tab/topbar setup -->
 	<input type="hidden" name="attr_net_acc" value="0"/>
 	<input type="radio" class="sheet-tab sheet-tab1" name="attr_core-tab" value="1" title="Pilot" checked="checked" /> 
@@ -241,14 +241,19 @@ on("sheet:opened change:acc_diff chage:frame_save_target change:frame_class chan
 	<span class="tab tab2" style='line-height: 40px;'>TALENTS</span>
 	<input type="radio" class="sheet-tab sheet-tab3" name="attr_core-tab" value="3" title="Mech"   /> 
 	<span class="tab tab3" style='line-height: 40px;margin-right:115px'>MECH</span>
-	
 	<input type="radio" class="acc-tab acc-tab1" name="attr_acc_tab" value="acc" title="Accuracy" /> 
 	<span class="acc-tab acc-tab1" style='line-height: 40px;'>ACC</span>
 	<input type="radio" class="acc-tab acc-tab2" name="attr_acc_tab" value="diff" title="Difficulty" /> 
 	<span class="acc-tab acc-tab2" style='line-height: 40px;'>DIFF</span>
 	<input type="radio" class="acc-tab acc-tab2" name="attr_acc_tab" value="none" title="None"checked="true" /> 
 	<span class="acc-tab acc-tab2" style='line-height: 40px;'>NONE</span>
-	<input type="number" name="attr_acc_diff" min="0" value="0" style="width:45px;height:40px;display:inline;margin-left:18px;text-align:center;font-size:18px;margin-top:2px"/>	
+	<select name="attr_acc_diff"  style="width:45px;height:40px; background-color: #f0f0f0;margin-left:18px;text-align:center;font-size:18px;background:#f0f0f0;margin-bottom:0px;position:relative;top:2px">
+		<option value=0>0</option>
+		<option value=1>1</option>
+		<option value=2>2</option>
+		<option value=3>3</option>
+		<option value=4>4</option>
+	</select>
 	<!-- end tab setup-->
 	
 	<div class="section-pilot"><!-- pilot tab -->   
@@ -1260,7 +1265,7 @@ on("sheet:opened change:acc_diff chage:frame_save_target change:frame_class chan
 						<div class="nomarg flex-element">
 							<input class="2digit underline" type="number" value="0" min="0" name="attr_frame_techatk"style="width:30px"/>
 						</div>
-						<span class="hp-annotations">bonus</span>
+						<span class="hp-annotations">base</span>
 						<div class="nomarg flex-element">
 							<input class="2digit underline" type="number" value="0" min="0" name="attr_frame_limited_bns"style="width:30px"/>
 						</div>
