Added ATLAS frame to dropdown display

--- a/LANCER RPG (1.8)/LANCER.html
+++ b/LANCER RPG (1.8)/LANCER.html
@@ -926,6 +926,7 @@ on("sheet:opened change:acc_diff chage:frame_save_target change:frame_class chan
 									<option value="ZHENG">ZHENG</option>
 								</optgroup>
 								<optgroup label="SMITH-SHIMANO">
+									<option value="ATLAS">ATLAS</option>
 									<option value="BLACK WITCH">BLACK WITCH</option>
 									<option value="DEATH'S HEAD">DEATH'S HEAD</option>
 									<option value="DUSK WING">DUSK WING</option>
