--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -18218,26 +18218,31 @@ on("change:nkw_aktiv change:at_nkw1 change:at_nkw2 change:at_nkw3 change:at_nkw4
 	}); 
 });	
 
-on("change:schild_aktiv change:SchildAT1 change:SchildAT2 change:SchildAT3 change:SchildAT4 change:schildtp1_1 change:schildtp2_1 change:schildtp3_1 change:schildtp4_1 change:schildtp1_2 change:schildtp2_2 change:schildtp3_2 change:schildtp4_2 change:schildschadensberechnung1 change:schildschadensberechnung2 change:schildschadensberechnung3 change:schildschadensberechnung4", function() {
-	getAttrs(["Schild_Aktiv", "SchildAT1", "SchildAT2", "SchildAT3", "SchildAT4", "SchildTP1_1", "SchildTP2_1", "SchildTP3_1", "SchildTP4_1", "SchildTP1_2", "SchildTP2_2", "SchildTP3_2", "SchildTP4_2", "Schildschadensberechnung1", "Schildschadensberechnung2", "Schildschadensberechnung3", "Schildschadensberechnung4", "KK_Wert"], function(values) {
-		var zuweisung = "";
+//Berechne Bonusschaden aufgrund Leiteigenschaft für alle Schilde
+on("change:schildschadensberechnung1 change:schildschadensberechnung2 change:schildschadensberechnung3 change:schildschadensberechnung4 change:KK_Wert", function() {
+	getAttrs(["Schildschadensberechnung1", "Schildschadensberechnung2", "Schildschadensberechnung3", "Schildschadensberechnung4", "KK_Wert"], function(values) {
+		var zuweisung = ""; 
 		var i;
 		for (i = 1; i < 5; i++) {
 				zuweisung += "Schild" + i + "_SB: Math.max(parseInt(values.KK_Wert) - parseInt(values.Schildschadensberechnung" + i + "), 0), " ;
-		}
+			}
 		eval("setAttrs({ " + zuweisung + " })");
-		
+	}); 
+});
+
+on("change:schild_aktiv change:SchildAT1 change:SchildAT2 change:SchildAT3 change:SchildAT4 change:schildtp1_1 change:schildtp2_1 change:schildtp3_1 change:schildtp4_1 change:schildtp1_2 change:schildtp2_2 change:schildtp3_2 change:schildtp4_2 change:schildschadensberechnung1 change:schildschadensberechnung2 change:schildschadensberechnung3 change:schildschadensberechnung4 change:schild1_sb change:schild2_sb change:schild3_sb change:schild4_sb", function() {
+	getAttrs(["Schild_Aktiv", "SchildAT1", "SchildAT2", "SchildAT3", "SchildAT4", "SchildTP1_1", "SchildTP2_1", "SchildTP3_1", "SchildTP4_1", "SchildTP1_2", "SchildTP2_2", "SchildTP3_2", "SchildTP4_2", "Schildschadensberechnung1", "Schildschadensberechnung2", "Schildschadensberechnung3", "Schildschadensberechnung4", "KK_Wert", "Schild1_SB", "Schild2_SB", "Schild3_SB", "Schild4_SB"], function(values) {
 		if (values.Schild_Aktiv == 1) {
-			setAttrs({ AT_Aktiv_Schild: values.SchildAT1, TP_W_Aktiv_Schild: parseInt(values.SchildTP1_1), TP_Bonus_Aktiv_Schild: parseInt(values.SchildTP1_2) });
+			setAttrs({ AT_Aktiv_Schild: values.SchildAT1, TP_W_Aktiv_Schild: parseInt(values.SchildTP1_1), TP_Bonus_Aktiv_Schild: parseInt(values.SchildTP1_2) + parseInt(values.Schild1_SB) });
 		}
 		if (values.Schild_Aktiv == 2) {
-			setAttrs({ AT_Aktiv_Schild: values.SchildAT2, TP_W_Aktiv_Schild: parseInt(values.SchildTP2_1), TP_Bonus_Aktiv_Schild: parseInt(values.SchildTP2_2) });
+			setAttrs({ AT_Aktiv_Schild: values.SchildAT2, TP_W_Aktiv_Schild: parseInt(values.SchildTP2_1), TP_Bonus_Aktiv_Schild: parseInt(values.SchildTP2_2) + parseInt(values.Schild1_SB) });
 		}
 		if (values.Schild_Aktiv == 3) {
-			setAttrs({ AT_Aktiv_Schild: values.SchildAT3, TP_W_Aktiv_Schild: parseInt(values.SchildTP3_1), TP_Bonus_Aktiv_Schild: parseInt(values.SchildTP3_2) });
+			setAttrs({ AT_Aktiv_Schild: values.SchildAT3, TP_W_Aktiv_Schild: parseInt(values.SchildTP3_1), TP_Bonus_Aktiv_Schild: parseInt(values.SchildTP3_2) + parseInt(values.Schild1_SB) });
 		}
 		if (values.Schild_Aktiv == 4) {
-			setAttrs({ AT_Aktiv_Schild: values.SchildAT4, TP_W_Aktiv_Schild: parseInt(values.SchildTP4_1), TP_Bonus_Aktiv_Schild: parseInt(values.SchildTP4_2) });
+			setAttrs({ AT_Aktiv_Schild: values.SchildAT4, TP_W_Aktiv_Schild: parseInt(values.SchildTP4_1), TP_Bonus_Aktiv_Schild: parseInt(values.SchildTP4_2) + parseInt(values.Schild1_SB) });
 		}
 	}); 
 });
