final visibility fixes

--- a/LANCER RPG (1.8)/LANCER.html
+++ b/LANCER RPG (1.8)/LANCER.html
@@ -261,7 +261,7 @@ on("sheet:opened change:acc_diff chage:frame_save_target change:frame_class chan
 			<div class="nomarg 1x tab-flex-item" style="height:75px;width:800px"> <!-- header bar-->
 				<div class="nested tab-flex-item">
 					<div class="flex-element"> 
-						<img src="images/logo.png" style="width:225px;height:64px;margin-left:2px"/>
+						<img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/LANCER%20RPG%20(1.8)/images/logo.png" style="width:225px;height:64px;margin-left:2px"/>
 					</div> 
 				</div> 
 				<div class="1x nopad headerbar tab-flex-item" style="height:100%;width:70%;"> <!--header inputs-->
@@ -675,7 +675,7 @@ on("sheet:opened change:acc_diff chage:frame_save_target change:frame_class chan
 			<div class="nomarg 1x tab-flex-item" style="height:75px;width:800px"> <!-- header bar-->
 				<div class="nested tab-flex-item">
 					<div class="flex-element"> 
-						<img src="images/logo.png" style="width:225px;height:64px;margin-left:2px"/>
+						<img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/LANCER%20RPG%20(1.8)/images/logo.png" style="width:225px;height:64px;margin-left:2px"/>
 					</div> 
 				</div> 
 				<div class="1x nopad headerbar tab-flex-item" style="height:100%;width:70%;"> <!--header inputs-->
@@ -868,7 +868,7 @@ on("sheet:opened change:acc_diff chage:frame_save_target change:frame_class chan
 			<div class="nomarg 1x tab-flex-item" style="height:75px;width:800px"> <!-- header bar-->
 				<div class="nested tab-flex-item">
 					<div class="flex-element"> 
-						<img src="images/logo.png" style="width:225px;height:64px;margin-left:2px"/>
+						<img src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/LANCER%20RPG%20(1.8)/images/logo.png" style="width:225px;height:64px;margin-left:2px"/>
 					</div> 
 				</div> 
 				<div class="1x nopad headerbar tab-flex-item" style="height:100%;width:70%;"> <!--header inputs-->
